-Adding next configs

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "keywords": [],
-  "main": "src/index.js",
+  "main": "index.js",
   "homepage": "https://portfolio.sahilpaudel.in",
   "author": "Sahil Paudel",
   "license": "MIT",
@@ -12,18 +12,21 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "predeploy": "yarn run build && cp CNAME build/CNAME",
-    "deploy": "gh-pages -d build"
+    "export": "next export",
+    "deploy": "rm -rf node_modules/.cache && next build && next export && touch out/.nojekyll && git add out/ && git commit -m \"Deploy portfolio to gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
-    "next": "^9.4.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "@material-ui/core": "4.9.12",
     "@material-ui/icons": "4.9.1",
+    "next": "^9.4.4",
+    "nprogress": "^0.2.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-ga": "^2.7.0"
   },
   "devDependencies": {
+    "babel-plugin-transform-define": "^2.0.0",
     "gh-pages": "2.2.0"
   }
 }
